newtype-tools/tests/trybuild/newtype-nested-path-from.stderr
error: expected `#[newtype(from(...))]`
 --> tests/trybuild/newtype-nested-path-from.rs:2:11
  |
2 | #[newtype(from)]
  |           ^^^^
